- Critical vulnerability CVE-2020-29599 resolved in wordpress

v1.3.0
======
- General file/directory cleanup
- Readme updates
- letsencrypt script updated
- Added cleanup script
- Wordpress now comes pre-installed (for new installations)
- Added image for Wordpress with CiviCRM
- Drupal7 upgraded to 7.78
- Drupal8 upgraded to 8.9.13

v1.3.1
======
- Disabled SQL strict mode in MariaDB
- Added Sendgrid support to Potfix image
- Fixed bug where .well-known is blocked, but .well-known/acme-challenge is explicitly allowed

v1.3.2
======
- Added script for local vulnerability scanning
- Added custom redmine image
- Changed drush permissions to root:10013 (www-data) with 750 permissions in drupal7

v1.3.3
======
- Removed sql_mode= from mariadb config
- Added innodb_strict_mode=0 to mariadb config
- Major Wordpress release to 5.7

v1.3.4
======
- Added gnu-libiconv library for Azure single sign-on
- Added bcmath to drupal7, drupal8 and wordpress builds

v1.3.5
======
- Added PHP soap extension to wordpress and drupal images

v1.4.0
======
- Removed dependency on official Wordpress image (which was over-complex)
- General cleanup of images and entrypoints
- Drupal7 and Drupal8 now self-install on start
- Wordpress minor version update to 5.7.1
- NGINX cloudflare IPV4 addresses now self-update on build
- NGINX logs access/error to stdout now too

v1.4.1
======
- Updated drupal 7 to 7.80
- Updated drupal 8 to 8.9.14

v1.4.2
======
- Permissions now set in background in Wordpress/Drupal
- Rebuild only, no code changes

v1.4.3
======
- Added Drupal9 image
- Added SSH image
- Cleaned up examples
- Updated virus scanning script in NGINX
- Removed restingclam image, now in seperate repo
- Added patch for Redmine attachment model to enable virus scanning
- Updated Drupal to 8.9.16
- Removed additional permissions script run (on upgrade) from Drupals

v1.4.4 (latest)
======
- Increased max_input_vars for Drupals
- Added memory_limit and error_logging config to wordpress